# arena-coach

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: build-bridge-exe.yml  ci.yml
addon/: ArenaCoach.lua  ArenaCoach.toc  INSTALL.md  README.md
addon/ArenaCoach/: ArenaCoach.toc  Core.lua  Tracker.lua  UI.lua
addon/core/: ArenaTracker.lua  CombatLog.lua  CooldownTracker.lua  EventBus.lua  Serializer.lua
addon/ui/: StatusFrame.lua
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_whitelist_entries.py
backend/arena_coach/: __init__.py  __main__.py
backend/arena_coach/access/: __init__.py  audit.py  crypto.py  models.py  service.py
backend/arena_coach/api/: __init__.py  app.py
backend/arena_coach/api/routes/: __init__.py  events.py
backend/arena_coach/bot/: __init__.py  checks.py  client.py
backend/arena_coach/bot/cogs/: __init__.py  access.py  coach.py  glossary.py  matchup.py
backend/arena_coach/kb/: __init__.py  indexer.py  loader.py  render.py  retriever.py  schema.py
backend/arena_coach/orchestrator/: __init__.py  client.py  pipeline.py
backend/arena_coach/shared/: __init__.py  logging.py  settings.py
backend/tests/fixtures/: minimal_valid.md
backend/tests/unit/: test_access_audit.py  test_access_crypto.py  test_kb_render.py  test_kb_schema.py  test_whitelist_service.py
bridge/: README.md  arena-bridge.spec  bridge.env.example  pyproject.toml
bridge/arena_bridge/: __init__.py  __main__.py  chat_tail.py  config.py  env_loader.py  normalizer.py  sv_tail.py  ws_client.py
docs/: architecture.md  investor-brief.md  phase-0-design.md  phase-1.5-translation-plan.md  phase-2-kickoff-prompt.md  phase-4.5-voice.md  server-setup-clean.md  strategy-data-acquisition.md
docs/decisions/: 0001-python-stack.md  0002-sqlite-vs-postgres.md  0003-chatframe-realtime-channel.md  README.md
ingest/: README.md  pyproject.toml
ingest/arena_ingest/: __init__.py  __main__.py  glossary_extract.py
ingest/arena_ingest/sources/: __init__.py  paste.py
ingest/tests/: __init__.py  conftest.py
kb/: README.md  compositions.json
kb/drafts/: rm-vs-hunter-rdruid.md  rm-vs-mage-priest.md  rm-vs-retpala-rsham.md  rm-vs-rogue-mage.md  rm-vs-rogue-priest.md  rm-vs-rogue-rdruid.md  rm-vs-rogue-rogue.md  rm-vs-warlock-priest.md  rm-vs-warlock-rdruid.md  rm-vs-warlock-rogue.md  rm-vs-warrior-rdruid.md  rm-vs-warrior-rsham.md  rp-vs-hunter-rdruid.md  rp-vs-mage-priest.md  rp-vs-retpala-rsham.md  rp-vs-rogue-mage.md  rp-vs-rogue-priest.md  rp-vs-rogue-rdruid.md  rp-vs-rogue-rogue.md  rp-vs-warlock-priest.md  rp-vs-warlock-rdruid.md  rp-vs-warrior-rdruid.md
kb/glossary/: abilities.json  terms.md
ops/caddy/: Caddyfile
ops/nginx/: pvpwowarena.surprise4you.dev.conf
ops/nginx/html/: download.html  how-it-works.html  index.html
ops/scripts/: backup_db.sh  cleanup-legacy.sh  deploy.sh  fix-ci.sh  phase1-git-bootstrap.sh  rotate_audit_log.sh  server-setup.sh
ops/systemd/: arena-coach-api.service  arena-coach-bot.service
tests/: test_access_audit.py  test_access_crypto.py  test_bridge_chat_tail.py  test_bridge_env_loader.py  test_bridge_normalizer.py  test_glossary_extract.py  test_kb_loader.py  test_kb_render.py  test_paste_parser.py  test_whitelist_service.py
tests/fixtures/: minimal_valid.md
