# Корневой pyproject — workspace-marker + общая конфигурация инструментов (ruff, mypy, pytest).
# Каждый deployable артефакт (backend, bridge, ingest) имеет свой собственный pyproject.toml
# со своими зависимостями. Корень собирает их через editable install в dev.

[project]
name = "arena-coach-workspace"
version = "0.1.0"
description = "Arena Coach — мульти-компонентный помощник для 2v2/3v3 арены WoW BC Classic Anniversary (2.4.3)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Arena Coach Dev" }]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend", "bridge", "ingest"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "C4",  # comprehensions
  "SIM", # simplify
  "RUF", # ruff-specific
]
ignore = [
  "E501", # line-length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"] # asserts ok in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "backend:bridge:ingest"

[[tool.mypy.overrides]]
# Сторонние пакеты без стабов
module = ["discord.*", "yt_dlp.*", "mss.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
# Старые backend/tests и ingest/tests оставлены как scaffolding-маркеры (sandbox не даёт
# удалить); реальный тест-набор лежит в корневом arena-coach/tests/. norecursedirs
# не даёт pytest подобрать их обратно через discovery.
norecursedirs = [
  "backend/tests",
  "bridge/tests",
  "ingest/tests",
  ".venv",
  "venv",
  "__pycache__",
]
addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra",
]
markers = [
  "integration: тесты с внешними зависимостями (Discord/Anthropic)",
  "slow: > 1 сек",
]
filterwarnings = ["error"]
