# Корневой pyproject — workspace-marker + общая конфигурация инструментов (ruff, mypy, pytest).
# Каждый deployable артефакт (backend, bridge, ingest) имеет свой собственный pyproject.toml
# со своими зависимостями. Корень собирает их через editable install в dev.

[project]
name = "arena-coach-workspace"
version = "0.1.0"
description = "Arena Coach — мульти-компонентный помощник для 2v2/3v3 арены WoW BC Classic Anniversary (2.4.3)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Arena Coach Dev" }]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend", "bridge", "ingest"]
# Legacy tests/ под-папки внутри backend/bridge/ingest остались как placeholder'ы
# (sandbox-сессия не дала их удалить). Реальные тесты — в корневом tests/.
extend-exclude = [
  "backend/tests",
  "bridge/tests",
  "ingest/tests",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "C4",  # comprehensions
  "SIM", # simplify
  "RUF", # ruff-specific
]
ignore = [
  "E501",   # line-length handled by formatter
  # У нас многоязычный проект (русские docstrings/комментарии). Эти 3 правила
  # ложно срабатывают на буквы вроде русской 'с' в "блока с YAML" — мы пишем
  # сознательно по-русски, не путаем алфавиты.
  "RUF001", # ambiguous unicode in strings
  "RUF002", # ambiguous unicode in docstrings
  "RUF003", # ambiguous unicode in comments
  # UP042 предлагает StrEnum (3.11+) вместо `class X(str, Enum)`. Pydantic v2
  # и многие сериализаторы лучше работают со стандартным `(str, Enum)`, оставляем.
  "UP042",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"] # asserts ok in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "backend:bridge:ingest"
# Легаси одноимённые tests-пакеты в backend/bridge/ingest — placeholder'ы,
# sandbox-сессия не дала их удалить. Реальные тесты — в корневом tests/.
exclude = [
  "backend/tests/",
  "bridge/tests/",
  "ingest/tests/",
]

[[tool.mypy.overrides]]
# Сторонние пакеты без стабов
module = ["discord.*", "yt_dlp.*", "mss.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Phase 2/4 stub-модули — пока пустые. Strict-typing включим когда реализуем.
# KB-схема и loader (Phase 1 real-code) остаются под --strict.
module = [
  "arena_coach.api.*",
  "arena_coach.bot.*",
  "arena_coach.access.*",
  "arena_coach.orchestrator.*",
  "arena_coach.shared.*",
  "arena_bridge.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
check_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
# Старые backend/tests и ingest/tests оставлены как scaffolding-маркеры (sandbox не даёт
# удалить); реальный тест-набор лежит в корневом arena-coach/tests/. norecursedirs
# не даёт pytest подобрать их обратно через discovery.
norecursedirs = [
  "backend/tests",
  "bridge/tests",
  "ingest/tests",
  ".venv",
  "venv",
  "__pycache__",
]
addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra",
]
markers = [
  "integration: тесты с внешними зависимостями (Discord/Anthropic)",
  "slow: > 1 сек",
]
filterwarnings = ["error"]
