# Корневой pyproject — workspace-marker + общая конфигурация инструментов (ruff, mypy, pytest).
# Каждый deployable артефакт (backend, bridge, ingest) имеет свой собственный pyproject.toml
# со своими зависимостями. Корень собирает их через editable install в dev.

[project]
name = "arena-coach-workspace"
version = "0.1.0"
description = "Arena Coach — мульти-компонентный помощник для 2v2/3v3 арены WoW BC Classic Anniversary (2.4.3)"
readme = "README.md"
# 3.10 — минимум, который держится Ubuntu 22.04 (без deadsnakes PPA).
# Код совместим с 3.10 через `from __future__ import annotations`.
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Arena Coach Dev" }]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["backend", "bridge", "ingest"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "C4",  # comprehensions
  "SIM", # simplify
  "RUF", # ruff-specific
]
ignore = [
  "E501",   # line-length handled by formatter
  # У нас многоязычный проект (русские docstrings/комментарии). Эти 3 правила
  # ложно срабатывают на буквы вроде русской 'с' в "блока с YAML" — мы пишем
  # сознательно по-русски, не путаем алфавиты.
  "RUF001", # ambiguous unicode in strings
  "RUF002", # ambiguous unicode in docstrings
  "RUF003", # ambiguous unicode in comments
  # UP042 предлагает StrEnum (3.11+) вместо `class X(str, Enum)`. Pydantic v2
  # и многие сериализаторы лучше работают со стандартным `(str, Enum)`, оставляем.
  "UP042",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"] # asserts ok in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "backend:bridge:ingest"

[[tool.mypy.overrides]]
# Сторонние пакеты без стабов
module = ["discord.*", "yt_dlp.*", "mss.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Phase 2 — расслабленная проверка для модулей с discord.py и sqlalchemy.
# KB-схема и loader остаются под --strict (не перечислены здесь).
module = [
  "arena_coach.api.*",
  "arena_coach.bot.*",
  "arena_coach.access.*",
  "arena_coach.orchestrator.*",
  "arena_coach.shared.*",
  "arena_coach.kb.render",
  "arena_bridge.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_return_any = false
check_untyped_defs = false
# discord.py typed stubs генерируют misc/arg-type шум — подавляем в relaxed модулях
warn_unused_ignores = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
norecursedirs = [
  ".venv",
  "venv",
  "__pycache__",
]
asyncio_mode = "auto"
addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra",
]
markers = [
  "integration: тесты с внешними зависимостями (Discord/Anthropic)",
  "slow: > 1 сек",
]
filterwarnings = [
  "error",
  # pytest-asyncio 0.23+ emits PytestUnraisableExceptionWarning on some teardowns
  "ignore::pytest.PytestUnraisableExceptionWarning",
  # pytest-asyncio 0.23+ warns when asyncio_default_fixture_loop_scope is unset.
  # The option itself is not recognized by 0.23.x (only 0.24+), so we cannot set
  # it in ini_options without breaking --strict-config. Filter the warning instead.
  "ignore:.*asyncio_default_fixture_loop_scope.*:pytest.PytestDeprecationWarning",
  # SQLAlchemy 2.x / aiosqlite — known DeprecationWarnings in test env
  "ignore::DeprecationWarning:sqlalchemy",
  "ignore::DeprecationWarning:aiosqlite",
  # discord.py <2.5 импортирует audioop, который deprecated в Python 3.11+
  # (удалён в 3.13). Нас не касается — мы не используем voice features.
  "ignore:.*audioop.*:DeprecationWarning",
]
