[project]
name = "arena-coach-backend"
version = "0.1.0"
description = "FastAPI + discord.py backend для Arena Coach"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.4,<3",
  "PyYAML>=6.0,<7",
  # API + bot — будут подключены в Phase 2, но пакеты ставятся сразу,
  # чтобы зафиксировать совместимые версии
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.30,<0.32",
  "websockets>=12,<13",
  "discord.py>=2.4,<3",
  "anthropic>=0.39,<1",
  "SQLAlchemy>=2.0,<3",
  "aiosqlite>=0.20,<0.21",
  "alembic>=1.13,<2",
  "cryptography>=43,<44",
]

[project.optional-dependencies]
dev = [
  "pytest>=7,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
  "types-PyYAML",
]

[project.scripts]
arena-coach = "arena_coach.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["arena_coach*"]
