[project]
name = "arena-coach-bridge"
version = "0.1.0"
description = "Локальный демон: tail SavedVariables + chat-log → WSS на backend"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.4,<3",
  "websockets>=12,<13",
  "watchdog>=4,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7,<9",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
]

[project.scripts]
arena-bridge = "arena_bridge.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["arena_bridge*"]
