[project]
name = "arena-coach-ingest"
version = "0.1.0"
description = "Ingest-пайплайн: внешние источники → kb/drafts/"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "pydantic>=2.7,<3",
  "PyYAML>=6.0,<7",
  "arena-coach-backend",
]

[project.optional-dependencies]
sources = [
  # Подключим в Phase 1.5+ для WebFetch/YouTube/Whisper
  "httpx>=0.27,<1",
  "beautifulsoup4>=4.12,<5",
  "yt-dlp>=2024.10.7",
]
dev = [
  "pytest>=7,<9",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
]

[project.scripts]
arena-ingest = "arena_ingest.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["arena_ingest*"]
